Load tracking script before service worker

--- a/js_location_test/index.html
+++ b/js_location_test/index.html
@@ -21,12 +21,12 @@
       };
       firebase.initializeApp(config);
     </script>
+    <script src="script.js" defer></script>
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('service-worker.js');
       }
     </script>
-    <script src="script.js" defer/>
   </head>
   <body>
       <p id="coords"></p>
